# cmake_template_executable

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
